29052025 ESTANDARIZACIÓN DE CÓDIGO, Y MEJORAMIENTO DE INTERFACES Y PERMISOS PARA NOTIFICACIONES

--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
@@ -115,7 +115,7 @@
               [ngClass]="{
                 'text-red-600': row.stockresultante < 0,
                 'text-blue-700': row.stockresultante > 0,
-                'text-gray-600': row.stockresultante == 0
+                'text-gray-600': row.stockresultante === 0
               }"
             >
               {{ row.stockresultante }}
