--- a/src/app/Ui/Modules/configuration/activaciones/page/lista-activaciones-page/lista-activaciones-page.component.html
+++ b/src/app/Ui/Modules/configuration/activaciones/page/lista-activaciones-page/lista-activaciones-page.component.html
@@ -8,7 +8,7 @@
         class="flex-none rounded-md text-xl no-underline font-semibold"
         aria-label="Preline"
       >
-        <h3 class="md:flex-1"><span>ACTIVACIONES</span></h3>
+        <h3 class="md:flex-1"><span>GESTIÓN ADMINISTRATIVA</span></h3>
       </a>
 
       <div class="lg:hidden ms-1"></div>
@@ -19,7 +19,7 @@
     >
       <div class="hidden lg:block">
         <h3 class="flex flex-row items-center justify-end gap-1">
-          <span>ACTIVACIONES</span>
+          <span>GESTIÓN ADMINISTRATIVA</span>
         </h3>
       </div>
 
@@ -43,10 +43,10 @@
     <div class="px-4 sm:px-4 sm:pt-4 space-y-4 sm:space-y-6">
       <div class="relative flex flex-col bg-white">
         <div class="p-4 sm:p-10 overflow-y-auto">
-          <div class="space-y-4">
+          <div class="space-y-4 flex flex-col items-center">
             <!-- Card -->
             <div
-              class="flex flex-col bg-white border border-gray-200 rounded-xl"
+              class="w-[100rem] flex flex-col bg-white border border-gray-200 rounded-xl"
             >
               <div class="flex justify-between gap-x-5 p-4 md:p-5">
                 <span class="flex gap-x-5">
@@ -96,6 +96,63 @@
                 </div>
               </div>
             </div>
+
+            <!-- End Card -->
+
+            <!-- Card -->
+            <!-- <div
+              class="w-[100rem] flex flex-col bg-white border border-gray-200 rounded-xl"
+            >
+              <div class="flex justify-between gap-x-5 p-4 md:p-5">
+                <span class="flex gap-x-5">
+                  <svg
+                    class="shrink-0 mt-1 size-5 text-gray-500"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <polyline points="3 6 5 6 21 6" />
+                    <path d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6" />
+                    <path d="M10 11v6" />
+                    <path d="M14 11v6" />
+                    <path d="M9 6V4a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2" />
+                  </svg>
+
+                  <span class="grow">
+                    <label
+                      for="notifyRegistroInventario"
+                      class="block font-medium text-gray-800"
+                      >Limpiar errores</label
+                    >
+                    <label
+                      for="notifyRegistroInventario"
+                      class="block text-sm text-gray-500"
+                      >Eliminará los registros con errores del historial para
+                      liberar espacio y evitar conflictos futuros.</label
+                    >
+                  </span>
+                </span>
+
+                <div>
+                  <div class="form-check form-switch custom-switch-large">
+                    <button
+                      type="button"
+                      data-bs-toggle="offcanvas"
+                      aria-controls="hs-detalles-inventario"
+                      class="flex shrink-0 justify-center items-center gap-2 size-11 text-sm font-medium rounded-lg border-transparent bg-white text-red-700 hover:bg-red-700 focus:outline-hidden focus:bg-red-700 disabled:opacity-50 disabled:pointer-events-none"
+                    >
+                      <mat-icon class="text-blue-600]">delete</mat-icon>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div> -->
             <!-- End Card -->
 
             <!-- Card -->
