--- a/src/app/Ui/Modules/Asignaciones/page/asignaciones/asignaciones.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/asignaciones/asignaciones.component.html
@@ -1,5 +1,5 @@
 <div class="w-full h-[100vh] lg:ps-64 lg:flex">
   <div class="w-full bg-fondo-datos py-4 space-y-4 sm:space-y-6">
-    <lista-asignar-page />
+    <app-lista-asignar-page />
   </div>
 </div>
