--- a/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
+++ b/src/app/Ui/Modules/Asignaciones/page/registro-asignar-page/registro-asignar-page.component.html
@@ -55,7 +55,7 @@
               class="w-full px-4 py-3 rounded-lg border border-gray-300 bg-white text-gray-800 focus:ring-2 focus:ring-blue-400 focus:outline-none transition shadow-sm"
             >
               <option value="" disabled selected>Seleccione un usuario</option>
-              @for (item of getUsuarios_All; track $index) { @if (item.estado ==
+              @for (item of getUsuarios_All; track $index) { @if (item.estado ===
               '1') {
               <option [value]="item.idusuario">
                 {{ item.idusuario }} - {{ item.nombreusuario }}
