--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -222,7 +222,7 @@
                     class="px-4 py-2 text-center border-b border-gray-200"
                   >
                     <div class="flex justify-center gap-2">
-                      <td-table-btn-detalle
+                      <app-td-table-btn-detalle
                         [idcarga]="row.idcarga"
                         [rucempresa]="row.rucempresa"
                         (obtenerDetalle)="
@@ -233,7 +233,7 @@
                         "
                       />
                       @if (row.estado === '1') {
-                      <button-asignar
+                      <app-button-asignar
                         [idcarga]="row.idcarga"
                         [rucempresa]="row.rucempresa"
                         (obtenerDetalle)="
@@ -243,7 +243,7 @@
                           )
                         "
                       />
-                      <button-anular-inventario
+                      <app-button-anular-inventario
                         [idcarga]="row.idcarga"
                         [rucempresa]="row.rucempresa"
                         (obtenerDetalle)="
