--- a/src/app/Ui/Modules/UsuarioLogueado/page/usuario-logueado-page/usuario-logueado-page.component.html
+++ b/src/app/Ui/Modules/UsuarioLogueado/page/usuario-logueado-page/usuario-logueado-page.component.html
@@ -89,7 +89,7 @@
           <div class="relative py-5 px-4 flex items-center gap-3">
             <div>
               <h3 class="text-lg font-bold text-white drop-shadow-md">
-                @if (datosSeguridadDetalle.estado == '1') {
+                @if (datosSeguridadDetalle.estado === '1') {
                   ACTIVO
                 }@else {
                   INACTIVO
