--- a/src/app/Ui/Modules/configuration/activaciones/page/lista-activaciones-page/lista-activaciones-page.component.html
+++ b/src/app/Ui/Modules/configuration/activaciones/page/lista-activaciones-page/lista-activaciones-page.component.html
@@ -43,7 +43,7 @@
     <div class="px-4 sm:px-4 sm:pt-4 space-y-4 sm:space-y-6">
       <div class="relative flex flex-col bg-white">
         <div class="p-4 sm:p-10 overflow-y-auto">
-          <div class="space-y-4 flex flex-col items-center">
+          <div class="space-y-4 ">
             <!-- Card -->
             <div
               class="w-[100rem] flex flex-col bg-white border border-gray-200 rounded-xl"
