--- a/src/app/Ui/Modules/configuration/activaciones/page/lista-activaciones-page/lista-activaciones-page.component.html
+++ b/src/app/Ui/Modules/configuration/activaciones/page/lista-activaciones-page/lista-activaciones-page.component.html
@@ -46,7 +46,7 @@
           <div class="space-y-4 ">
             <!-- Card -->
             <div
-              class="w-[100rem] flex flex-col bg-white border border-gray-200 rounded-xl"
+              class="flex flex-col bg-white border border-gray-200 rounded-xl"
             >
               <div class="flex justify-between gap-x-5 p-4 md:p-5">
                 <span class="flex gap-x-5">
